// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<DocumentSuggester /> should render 1`] = `
.c0 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  text-align: left;
}

.c1 ul {
  z-index: 100;
}

.c1 li[role="option"]:nth-child(2n + 1) {
  background: #f7f7f7;
}

<div>
  <label
    class="c0"
    for="main-search-input"
  >
    <span
      class="hidden"
    >
      Rechercher
    </span>
    <div
      aria-expanded="false"
      aria-haspopup="listbox"
      aria-owns="react-autowhatever-cdtn-documents-suggester"
      role="combobox"
    >
      <input
        aria-autocomplete="list"
        aria-controls="react-autowhatever-cdtn-documents-suggester"
        autocomplete="off"
        id="main-search-input"
        name="query"
        placeholder="document suggester placeholder"
        type="search"
        value="foo"
      />
      <div
        class="c1"
        id="react-autowhatever-cdtn-documents-suggester"
        role="listbox"
      />
    </div>
  </label>
</div>
`;

exports[`<DocumentSuggester /> should render suggestions 1`] = `
.c2 p {
  margin: 0;
}

.c0 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  text-align: left;
}

.c1 ul {
  z-index: 100;
}

.c1 li[role="option"]:nth-child(2n + 1) {
  background: #f7f7f7;
}

.c3 {
  display: inline-block;
}

.c4 {
  display: inline-block;
}

.c5 {
  display: inline-block;
}

.c6 {
  display: inline-block;
}

<div>
  <label
    class="c0"
    for="main-search-input"
  >
    <span
      class="hidden"
    >
      Rechercher
    </span>
    <div
      aria-expanded="true"
      aria-haspopup="listbox"
      aria-owns="react-autowhatever-cdtn-documents-suggester"
      role="combobox"
    >
      <input
        aria-autocomplete="list"
        aria-controls="react-autowhatever-cdtn-documents-suggester"
        autocomplete="off"
        id="main-search-input"
        name="query"
        placeholder="search foo"
        type="search"
        value="foo"
      />
      <div
        class="c1"
        id="react-autowhatever-cdtn-documents-suggester"
        role="listbox"
      >
        <ul
          role="listbox"
          style="margin: .5em 0px 0px 0px; padding: 0px 0px 0px 0px; border: 1px solid silver; border-radius: 3px; background: white; position: absolute; left: 0px; right: 0px; box-shadow: 0 10px 10px -10px #b7bcdf;"
        >
          <li
            aria-selected="false"
            data-suggestion-index="0"
            id="react-autowhatever-cdtn-documents-suggester--item-0"
            role="option"
            style="list-style-type: none; border-radius: 3px; padding: 5px; line-height: 2rem; cursor: pointer;"
          >
            <div
              class="c2"
            >
              <div
                class="c3"
              >
                <b>
                  foo
                </b>
              </div>
            </div>
          </li>
          <li
            aria-selected="false"
            data-suggestion-index="1"
            id="react-autowhatever-cdtn-documents-suggester--item-1"
            role="option"
            style="list-style-type: none; border-radius: 3px; padding: 5px; line-height: 2rem; cursor: pointer;"
          >
            <div
              class="c2"
            >
              <div
                class="c4"
              >
                <b>
                  foo
                </b>
                bar
              </div>
            </div>
          </li>
          <li
            aria-selected="false"
            data-suggestion-index="2"
            id="react-autowhatever-cdtn-documents-suggester--item-2"
            role="option"
            style="list-style-type: none; border-radius: 3px; padding: 5px; line-height: 2rem; cursor: pointer;"
          >
            <div
              class="c2"
            >
              <div
                class="c5"
              >
                <b>
                  foo
                </b>
                 bar ?
              </div>
            </div>
          </li>
          <li
            aria-selected="false"
            data-suggestion-index="3"
            id="react-autowhatever-cdtn-documents-suggester--item-3"
            role="option"
            style="list-style-type: none; border-radius: 3px; padding: 5px; line-height: 2rem; cursor: pointer;"
          >
            <div
              class="c2"
            >
              <div
                class="c6"
              >
                <b>
                  foo
                </b>
                 bazzz
              </div>
            </div>
          </li>
        </ul>
      </div>
    </div>
  </label>
</div>
`;
